--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcc 'DA'
 - !lcsh 'Admirals --Great Britain -- Correspondence'
 - !lcsh 'Hamilton, Emma, Lady, 1761?-1815 -- Correspondence'
+- GITenberg
 title: 'The Letters of Lord Nelson to Lady Hamilton, Vol II.
 
   With A Supplement Of Interesting Letters By Distinguished Characters'
